WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
181687
SWServerWorker::m_contextConnectionIdentifier may get out of date
https://bugs.webkit.org/show_bug.cgi?id=181687
Summary
SWServerWorker::m_contextConnectionIdentifier may get out of date
Chris Dumez
Reported
2018-01-16 10:06:07 PST
SWServerWorker::m_contextConnectionIdentifier may get out of date. This happens when when the context process crashes and is relaunched.
Attachments
Patch
(4.11 KB, patch)
2018-01-16 10:13 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2018-01-16 10:10:43 PST
<
rdar://problem/36548111
>
Chris Dumez
Comment 2
2018-01-16 10:13:24 PST
Created
attachment 331398
[details]
Patch
WebKit Commit Bot
Comment 3
2018-01-16 16:50:01 PST
Comment on
attachment 331398
[details]
Patch Clearing flags on attachment: 331398 Committed
r227010
: <
https://trac.webkit.org/changeset/227010
>
WebKit Commit Bot
Comment 4
2018-01-16 16:50:03 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug