SWServerWorker::m_contextConnectionIdentifier may get out of date https://bugs.webkit.org/show_bug.cgi?id=181687 <rdar://problem/36548111>

Reviewed by Brady Eidson.

SWServerWorker::m_contextConnectionIdentifier may get out of date. This happens when the
context process crashes and is relaunched.

No new tests, added assertion in terminateWorkerInternal() that hits without this fix.

* workers/service/server/SWServer.cpp:
(WebCore::SWServer::runServiceWorker):
(WebCore::SWServer::terminateWorkerInternal):
(WebCore::SWServer::unregisterServiceWorkerClient):
* workers/service/server/SWServerWorker.h:
(WebCore::SWServerWorker::setContextConnectionIdentifier):


Canonical link: https://commits.webkit.org/197552@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@227010 268f45cc-cd09-0410-ab3c-d52691b4dbfc