Source/WebCore/workers/service/server/SWServer.cpp
@@ -539,6 +539,11 @@ bool SWServer::runServiceWorker(ServiceWorkerIdentifier identifier)
 
     auto* connection = SWServerToContextConnection::globalServerToContextConnection();
     ASSERT(connection);
+
+    // When re-running a service worker after a context process crash, the connection identifier may have changed
+    // so we update it here.
+    worker->setContextConnectionIdentifier(connection->identifier());
+
     connection->installServiceWorkerContext(worker->contextData(), m_sessionID);
 
     return true;
@@ -557,11 +562,12 @@ void SWServer::syncTerminateWorker(SWServerWorker& worker)
 void SWServer::terminateWorkerInternal(SWServerWorker& worker, TerminationMode mode)
 {
     ASSERT(m_runningOrTerminatingWorkers.get(worker.identifier()) == &worker);
-    ASSERT(!worker.isTerminating());
+    ASSERT(worker.isRunning());
 
     worker.setState(SWServerWorker::State::Terminating);
 
     auto* connection = SWServerToContextConnection::connectionForIdentifier(worker.contextConnectionIdentifier());
+    ASSERT(connection);
     if (!connection) {
         LOG_ERROR("Request to terminate a worker whose context connection does not exist");
         workerContextTerminated(worker);
@@ -738,7 +744,7 @@ void SWServer::unregisterServiceWorkerClient(const ClientOrigin& clientOrigin, S
         ASSERT(!iterator->value.terminateServiceWorkersTimer);
         iterator->value.terminateServiceWorkersTimer = std::make_unique<Timer>([clientOrigin, this] {
             for (auto& worker : m_runningOrTerminatingWorkers.values()) {
-                if (worker->origin() == clientOrigin)
+                if (worker->isRunning() && worker->origin() == clientOrigin)
                     terminateWorker(worker);
             }
             m_clientIdentifiersPerOrigin.remove(clientOrigin);
